# urlscan-python

./: .gitignore  404.html  LICENSE  README.md  index.html  latest  lefthook.yml  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  versions.json
.github/workflows/: docs.yml  publish.yml  test.yml
0.0.1/: 404.html  index.html  sitemap.xml
0.0.1/dev/: index.html
0.0.1/references/client/: index.html
0.0.1/references/errors/: index.html
0.0.1/references/iterator/: index.html
0.0.1/search/: search_index.json
0.0.2/: index.html  objects.inv  sitemap.xml
0.0.2/references/client/: index.html
0.0.2/references/iterator/: index.html
0.0.2/references/pro/: index.html
0.0.2/search/: search_index.json
0.0.3/: objects.inv  sitemap.xml
0.0.3/dev/: index.html
0.0.3/references/client/: index.html
0.0.3/references/pro/: index.html
0.0.3/search/: search_index.json
2026.2.25/: 404.html  index.html  sitemap.xml
2026.2.25/search/: search_index.json
2026.3.10/: objects.inv  sitemap.xml
2026.3.10/references/client/: index.html
2026.3.10/references/errors/: index.html
2026.3.10/references/pro/: index.html
2026.3.10/search/: search_index.json
2026.3.26/: 404.html  index.html  objects.inv  sitemap.xml
2026.3.26/dev/: index.html
2026.3.26/references/client/: index.html
2026.3.26/references/errors/: index.html
2026.3.26/references/iterator/: index.html
2026.3.26/references/pro/: index.html
2026.3.26/references/utils/: index.html
2026.3.26/search/: search_index.json
dev/: index.html
docs/: README.md  dev.md
docs/references/: async_client.md  client.md  errors.md  iterator.md  pro.md  utils.md
examples/: bulk_scan.py  rate_limit_handling.py  screenshot_to_pil.py  search_and_download_screenshots.py  search_to_dataframe.py  search_to_network_graph.ipynb
references/client/: index.html
references/errors/: index.html
references/iterator/: index.html
scripts/: convert_to_pep440_version.py
search/: search_index.json
src/urlscan/: __init__.py  async_client.py  base.py  client.py  error.py  iterator.py  types.py  utils.py
src/urlscan/pro/: __init__.py  brand.py  channel.py  datadump.py  hostname.py  incident.py  livescan.py  saved_search.py  subscription.py  visibility.py
tests/: test_async_client.py  test_client.py  test_utils.py  test_version.py
tests/integration/: conftest.py  test_client.py
tests/integration/pro/: test_brand.py  test_channel.py  test_datadump.py  test_hostname.py  test_livescan.py  test_pro.py  test_saved_search.py  test_structure_search.py  test_subscription.py  test_visibility.py
tests/pro/: test_brand.py  test_channel.py  test_datadump.py  test_hostname.py  test_incident.py  test_livescan.py  test_saved_search.py  test_structure_search.py
tests/unit/: conftest.py  test_client.py  test_utils.py
tests/unit/pro/: test_file.py  test_pro.py  test_subscription.py  test_visibility.py
