[project]
name = "urlscan-python"
dynamic = ["version"]
description = "The official Python API client for urlscan.io"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = ["httpx~=0.27"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
  "lefthook>=2.0.15",
  "loguru>=0.7.3",
  "mypy>=1.19.1",
  "nbstripout>=0.9.0",
  "packaging>=26.0",
  "pytest-freezer>=0.4.9",
  "pytest-httpserver>=1.1.3",
  "pytest-optional-tests==0.1.1",
  "pytest-pretty>=1.3.0",
  "pytest-randomly>=4.0.1",
  "pytest-timeout>=2.4.0",
  "pytest>=9.0.2",
  "python-dotenv>=1.2.1",
  "ruff>=0.14.14",
  "uv-sort>=0.7.0",
]
docs = [
  "mike>=2.1.3",
  "mkdocs-include-markdown-plugin>=7.2.1",
  "mkdocs-material>=9.7.1",
  "mkdocs>=1.6.1",
  "mkdocstrings[python]>=1.0.2",
]

[tool.uv]
default-groups = ["dev", "docs"]

[project.urls]
Repository = "https://github.com/urlscan/urlscan-python/"
Homepage = "https://github.com/urlscan/urlscan-python/"
Documentation = "https://urlscan.github.io/urlscan-python/"
Issues = "https://github.com/urlscan/urlscan-python/issues/"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/urlscan/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.wheel]
packages = ["src/urlscan"]

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "C",   # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "FA",  # flake8-future-annotations
  "I",   # isort
  "N",   # pep8-naming
  "RET", # flake8-return
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "W",   # pycodestyle warnings
]
ignore = [
  "E501", # line too long
  "D203", # incorrect blank line before class
  "D213", # multi-line docstring summary should start at the first line
]

[tool.ruff.lint.per-file-ignores]
# ignore tests, scripts and examples directories from docstring checks
# (ref. https://github.com/astral-sh/ruff/issues/8471
"tests/**" = ["D"]
"scripts/**" = ["D"]
"examples/**" = ["D"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
